[project]
name = "thesis-new"
version = "0.1.0"
description = ""
authors = [
    {name = "math1p0027",email = "math1p0027@math.uoc.gr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "thesis_new", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
